Fix horizontal scroll bug on about me animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
   background-color: #111117;
   color: #fff;
   margin: 0;
-  overflow-x: hidden;
 }
 
 h1,
@@ -28,10 +27,6 @@ h4,
 h5,
 h6 {
   font-family: var(--header-font);
-}
-
-.active {
-  diplay: block;
 }
 
 .inactive {
@@ -134,7 +129,10 @@ nav a:hover {
   }
   #about-container a {
   margin-top: 6vw;
-}
+  }
+  nav {
+    padding: 0 6%;
+  }
 }
 
 #nav-links-mobile {
@@ -244,14 +242,10 @@ nav a:hover {
 
 #background-divider {
   position: absolute;
-  background-color: #222;
-  color: #222;
-  height: 110vh;
-  width: 100%;
-  transform: rotate(45deg);
+  top: 0;
+  color: #111;
+  height: 50vh;
   z-index: 1;
-  overflow: hidden;
-  box-shadow: 14px 14px 10px #fff;
 }
 
 #background-divider > p {
@@ -278,22 +272,19 @@ nav a:hover {
 }
 
 .unhidden-large {
-  animation: rotateInLarge 2s ease-in forwards;
+  animation: rotateInLarge 1s ease-in forwards;
 }
 
 .unhidden-small {
-  animation: rotateInSmall 1.5s ease-in forwards;
+  animation: rotateInSmall 1s ease-in forwards;
 }
 
 @keyframes rotateInLarge {
   0% {
     position: absolute;
-    background-color: #222;
     height: 100vh;
     width: 100%;
     transform: rotate(50deg);
-    z-index: 1;
-    overflow: hidden;
   }
   40% {
     transform: rotate(25deg);
@@ -303,7 +294,6 @@ nav a:hover {
     padding: 1rem;
     margin: 0 5%;
     transition: all 3s;
-    color: #333;
   }
   100% {
     transform: rotate(0);
@@ -320,34 +310,28 @@ nav a:hover {
 
 @keyframes rotateInSmall {
   0% {
-    position: absolute;
-    background-color: #222;
-    height: 100vh;
-    width: 100%;
-    transform: rotate(50deg);
-    z-index: 1;
-    overflow: hidden;
+    transform: rotate(-45deg);
+    width: 85%;
+    position: relative;
   }
-  30% {
-    transform: rotate(25deg);
-    width: 100%;
+  80% {
+    transform: rotate(0);
+    width: 85%;
     height: auto;
     position: relative;
-    padding: 1rem;
-    margin: 0 5%;
-    transition: all 3s;
-    color: #333;
+    color: #fff;
+    box-shadow: none;
   }
   100% {
     transform: rotate(0);
-    width: 100%;
+    width: 85%;
     height: auto;
     position: relative;
-    padding: 1rem;
-    margin: 0 5%;
-    transition: all 3s;
     color: #fff;
     box-shadow: none;
+    padding-top: 1rem;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
   }
 }
 
